fix: make LocalFileStorageService path validation Java 8 compatible